--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@
   }
 
   body {
-    background-image: url('../img/bg.jpg');
+    background-image: url('../img/bg.JPG');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
